--- a/templates/user_main_page.html
+++ b/templates/user_main_page.html
@@ -11,8 +11,8 @@
     <h1>Welcome back, {{ session['username'] }} !</h1>
 </div>
    <form id="search_bar" action="/search">
-       <select name="mydropdown">
-            <option value="Book">Book</option>
+       <select name="dropdown">
+            <option selected value="Book">Book</option>
             <option value="Author">Author</option>
             <option value="Categories">Categories</option>
             <option value="User">User</option>
