--- a/templates/add_list_page.html
+++ b/templates/add_list_page.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+    <link href="/static/style.css" rel="stylesheet" media="screen">
     <meta charset="UTF-8">
-    <style>
-
-        #description{
-            width: 20em;
-            height: 10em;
-        }
-
-    </style>
     <title></title>
 </head>
 <body>
@@ -20,6 +13,6 @@
     </textarea><br>
     <input type="checkbox" name="public" value="f" checked>Is Public<br>
     <input type="submit" value="Create List">
-
+</form>
 </body>
 </html>
