--- a/templates/edit_list.html
+++ b/templates/edit_list.html
@@ -1,51 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head lang="en">
+    <link href="/static/style.css" rel="stylesheet" media="screen">
     <meta charset="UTF-8">
-   <style>
- body{
-
- }
-
- #menu ul {
-    height: auto;
-    padding: 4px 0px;
-    margin: 0px;
-}
- #menu li {
-display: inline;
-padding: 20px;
-font-size: 25px;
-padding-top: 1px;
-}
-
- #menu a {
-    text-decoration: none;
-    color: #00F;
-    padding: 6px 6px 6px 6px;
-}
-#search_bar{
-    display: inline;
-    float: right;
-    overflow: hidden;
-    padding-right: 30px;
-}
-
-#h2{
-    font-size: 20px;
-}
-
-#add_list{
-    float:right;
-    padding-right: 30px;
-}
-#add_list1{
-     width: 10em;  height: 3em;
-
-}
-
-   </style>
     <title>User List Page</title>
 </head>
 <body>
