Work this time at night is dangerous

--- a/templates/add_list_page.html
+++ b/templates/add_list_page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="/lists/add_list/add" method="POST">
+<form action="/users/{{uid}}/lists/add" method="POST">
     <input name="title" placeholder="Title" type="text" width="80"><br>
     <textarea name="description" placeholder="Description" cols="40" rows="10">
     </textarea><br>
