Adding all files

--- a/templates/author_details.html
+++ b/templates/author_details.html
@@ -21,7 +21,7 @@
     </form>
 <ul>
     {% for d in details %}
-        <li><a href="/author/{{d.id}}/">{{ d.title }}</a></li>
+        <li><a href="/books/{{d.id}}/">{{ d.title }}</a></li>
     {% endfor %}
 </ul>
 </body>
