--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -24,8 +24,8 @@
 
         <div id="menu">
          <ul>
-              <li aria-setsize="10"><a href="/">Home</a></li>
-              <li><a href="aboutus.html">Friends</a></li>
+              <li aria-setsize="10"><a href="/main">Home</a></li>
+              <li><a href="/followers/<uid>">Friends</a></li>
               <li><a href="/users/{{uid}}/lists">My Lists</a></li>
         </ul>
        </div>
